too long city fix

--- a/src/styles/special.scss
+++ b/src/styles/special.scss
@@ -241,7 +241,6 @@
 	font-size: 12px;
 	margin-right: 8px;
 	transition: 0.2s;
-	line-height: 1.25;
 
 	&:last-child {
 		margin-right: 0;
